# BattleshipTournament

./: .gitignore  README.md
BattleshipTournament/: BattleshipTournament.sln  defines.txt
BattleshipTournament/BattleshipTournament/: BattleshipGame.cpp  BattleshipGame.cpp.orig  BattleshipTournament.vcxproj  BattleshipTournament.vcxproj.filters  Battleship_MAP_player.cpp  Battleship_MAP_player.cpp.orig  Battleship_MAP_player.h  BoardClass.cpp  BoardClass.cpp.orig  BoardClass.h  BoardClass.h.orig  CMakeLists.txt  DummyPlayer.h  GameManager.cpp  GameManager.cpp.orig  GameManager.h  GameManager.h.orig  IBattleshipGameAlgo.h  Logger.cpp  Logger.h  ScoreBoard.cpp  ScoreBoard.h  Ship.cpp  Ship.cpp.orig  Ship.h  ThreadPool.cpp  ThreadPool.h  TournamentManager.cpp  TournamentManager.h  Utils.cpp  Utils.h  config.xml
BattleshipTournament/BattleshipTournament/Debug/: vc140.idb
BattleshipTournament/BattleshipTournament/Debug/Battlesh.A722A13A.tlog/: BattleshipTournament.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
BattleshipTournament/BattleshipTournament/x64/Debug/: BattleshipTournament.Build.CppClean.log.orig  BattleshipTournament.log.orig  utils.obj.enc  vc140.idb
BattleshipTournament/BattleshipTournament/x64/Debug/Battlesh.A722A13A.tlog/: BattleshipTournament.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BattleshipTournament/Boards/: 3d_board_10x10x1_0.sboard  3d_board_10x10x1_1.sboard  3d_board_10x10x6_0.sboard  3d_board_15x15x15_0.sboard  bad_board_4.sboard
BattleshipTournament/MAP_Battleship_Player/: MAP_Battleship_Player.vcxproj  MAP_Battleship_Player.vcxproj.filters
BattleshipTournament/MAP_Battleship_Player/x64/Debug/: vc140.idb
BattleshipTournament/Test/: 3d_board_10x10x6_1.sboard  3d_board_15x15x15_1.sboard  bad_board_1.sboard  good_board_0 (2).sboard
BattleshipTournament/Test/old/: good_board.sboard  good_board_0 (2).sboard
BattleshipTournament/x64/Debug/: BattleshipTournament.ilk
